feat(group-buy): cursor first page logic updated for product management (#9)